FEAT-customize services for fatjar